fix: set white as icon color in dark mode

--- a/src/template/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/template/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -12,7 +12,6 @@
 
   text-decoration: none;
   box-sizing: border-box;
-  color: var(--text-color);
   width: 100%;
   height: 100%;
   padding: var(--spacing-3) var(--spacing-4);
